--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@babylonjs/havok": "^1.1.4",
     "@dimforge/rapier3d": "^0.11.2",
     "@lastolivegames/becsy": "^0.15.5",
     "bitecs": "^0.3.38",
